<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp">

    <TextView
        android:id="@+id/tvTitle"
        style="@style/ItemTextStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:gravity="center"
        android:text="@string/lb_use_case_title"
        android:textSize="24sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/tvCheckOut"
        style="@style/ItemTextStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/lb_use_case_1"
        app:drawableRightCompat="@drawable/ic_right_arrow" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginVertical="2dp"
        android:background="@color/divider" />

    <TextView
        android:id="@+id/tvBanner"
        style="@style/ItemTextStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/lb_use_case_2"
        app:drawableRightCompat="@drawable/ic_right_arrow" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginVertical="2dp"
        android:background="@color/divider" />

    <TextView
        android:id="@+id/tvMyPage"
        style="@style/ItemTextStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/lb_use_case_3"
        app:drawableRightCompat="@drawable/ic_right_arrow" />

</LinearLayout>