<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/tbToolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:contentInsetStart="0dp">

        <TextView
            style="@style/TopTitleStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="56dp"
            android:gravity="center"
            android:text="@string/lb_check_out"
            android:textSize="24sp"
            android:textStyle="bold" />

    </androidx.appcompat.widget.Toolbar>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginHorizontal="16dp"
                android:layout_marginTop="16dp"
                android:scaleType="fitXY"
                android:src="@drawable/ic_check_out_item_1" />

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginHorizontal="16dp"
                android:layout_marginTop="16dp"
                android:scaleType="fitXY"
                android:src="@drawable/ic_check_out_item_2" />

        </LinearLayout>
    </ScrollView>

    <LinearLayout
        android:id="@+id/lnPayWithCredify"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginHorizontal="16dp"
        android:background="@drawable/shape_pay_with_credify_bg"
        android:clickable="true"
        android:focusable="true"
        android:gravity="center"
        android:orientation="horizontal">

        <TextView
            style="@style/NormalTextStyle"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginEnd="16dp"
            android:gravity="center"
            android:text="@string/lb_pay_with"
            android:textColor="@color/white"
            android:textSize="20sp" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_credify_logo_with_text" />
    </LinearLayout>

    <TextView
        android:id="@+id/tvPlaceOrder"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginHorizontal="16dp"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="16dp"
        android:background="@drawable/shape_place_order_bg"
        android:gravity="center"
        android:text="@string/lb_place_order"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="20sp" />
</LinearLayout>